--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "rn-v2",
+  "name": "front-rn-v2",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -21,14 +21,14 @@
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.4",
+    "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -37,9 +37,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
-    "jest-expo": "^49.0.0",
+    "jest-expo": "~49.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
